# stockula

./: .bumpversion.cfg  .config-auto.yaml  .config.yaml  .coveragerc  .dockerignore  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  .stockula-optimized.yaml  .yamlfmt  .yamllint  ARCHITECTURE_GUIDE.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.nvidia  EXAMPLES.md  Makefile  README.md  REMOVE_THREADING_GUIDE.md  config.example.yaml  config.full.yaml  config.simple.yaml  coverage.xml  coverage_output.txt  docker-compose.gpu.yml  docker-compose.timescale.yml  docker-compose.yml  junit.xml  mkdocs.yml  out.txt  pyproject.toml  pytest.ini  release-please-config.json  requirements-gpu.txt  requirements.txt  stockula-auto.yml  stockula-dynamic.yml  stockula-optimized.yml  stockula.db  (+12 more)
alembic/: env.py
data/: models.json
deploy/: README.md  docker-compose.prod.yml  docker-compose.yml
docs/: CONTRIBUTING.md  FORECASTING_BACKENDS.md  FORECASTING_MODELS.md  GPU_SUPPORT.md  TIMESCALEDB_MIGRATION_PLAN.md  TIMESCALEDB_QUICKSTART.md  docker-gpu-python312-migration.md  docker.md  index.md  registry-pattern.md  timescaledb_migration.md  timescaledb_migration_diagrams.md  troubleshooting.md
examples/: README.md  automatic_dynamic_rates_example.py  autots_database_example.py  backtest_optimized_allocation_example.py  config.backtest-optimized.yaml  config.dynamic.yaml  config.full.yaml  dynamic_sharpe_example.py  pipeline_example.py  timescaledb_usage.py  treasury_rate_example.py
notebooks/: ema_portfolio.md  get_data.ipynb
scripts/: check_python_compatibility.py  (+9 more)
(+188 files in other folders)
