[project]
name = "stockula"
version = "0.1.0"
description = ""
authors = [
    {name = "Mitchell Murphy", email = "mitch.murphy@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alpaca-py>=0.42.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.5",
    "httpx>=0.28.1",
    "prophet>=1.1.7",
    "autots>=0.6.21",
    "darts>=0.36.0",
    "pyql>=3.0.0",
    "pandas>=2.3.1",
    "finta>=1.3",
    "matplotlib>=3.10.3",
    "mplfinance>=0.12.10b0",
    "backtesting>=0.6.4",
    "yfinance>=0.2.65",
    "pydantic-settings>=2.10.1",
    "pyyaml>=6.0.2",
    "dependency-injector>=4.48.1",
    "alembic==1.16.4",
    "sqlalchemy>=2.0.41",
    "rich>=14.1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.12.5",
    "pytest>=8.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stockula"]

[tool.uv]
dev-dependencies = [
    "ruff>=0.12.5",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.16",
]

[tool.coverage.run]
omit = [
    "src/stockula/backtesting/strategies.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
